tests/compile_fail/nested_with_resolve_with.stderr
error: nested cannot be combined with default, default_str, resolve_with, envs, override, or sensitive
  --> tests/compile_fail/nested_with_resolve_with.rs:10:5
   |
10 |     inner: String,
   |     ^^^^^
